finalize all endpoints

--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.0.3"
+    "swr": "^2.0.3",
+    "window": "^4.2.7"
+  },
+  "devDependencies": {
+    "jsdom": "21.1.0",
+    "jsdom-global": "3.0.2"
   }
 }
